Add more websites
I had these websites laying around in my projects section. I decided to add them.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head> </head>
+
 	<body>
 		<h4>
 			THIS IS JUST A WEBSITE I MADE. IF YOU WANT TO SEE MY CREATIONS, CLICK ON
@@ -84,6 +85,20 @@
 				Text Changer<br /><img
 					height="100px"
 					src="./uploadedassets/webassets/textchange.png"
+				/></button
+		></a>
+		<a href="./TEXTEDTN/"
+			><button>
+				TEXTEDTN<br /><img
+					height="100px"
+					src="./uploadedassets/webassets/textedtn.png"
+				/></button
+		></a>
+		<a href="./charcntr1/"
+			><button>
+				charcntr1<br /><img
+					height="100px"
+					src="./uploadedassets/webassets/charcntr1.png"
 				/></button
 		></a>
 	</body>
