--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head> </head>
+	<head>
+		<h2>
+			Welcome to my website! If you want to see my creations, click one of the
+			buttons below:
+		</h2>
+	</head>
 
 	<body>
-		<h4>
-			THIS IS JUST A WEBSITE I MADE. IF YOU WANT TO SEE MY CREATIONS, CLICK ON
-			ONE OF THE LINKS DOWN BELOW:
-		</h4>
-		<br />
+		Files: <br />
 		<a href="./uploadedassets/BlueTransCur.zip"
 			><button height="120px" width="100px">BlueTransCursor</button></a
 		>
@@ -15,7 +16,8 @@
 		<a href="./uploadedassets/BlueTransCur v2.zip"
 			><button height="120px" width="100px">BlueTransCursor v2</button></a
 		>
-
+		<br />
+		Websites: <br />
 		<a href="./rockpaperscissors/"
 			><button>
 				My Rock Paper Scissors Website<br /><img
