Moved sites to 'sites' folder AND added site for BlueTransCur
Did this so code management would be better.
Also added site to BlueTransCur so that you could view the cursors.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 
 	<body>
 		Files: <br />
-		<a href="./uploadedassets/BlueTransCur.zip"
+		<a href="./sites/btc/"
 			><button height="120px" width="100px">BlueTransCursor</button></a
-		>
-
-		<a href="./uploadedassets/BlueTransCur v2.zip"
-			><button height="120px" width="100px">BlueTransCursor v2</button></a
 		>
 		<br />
 		Websites: <br />
-		<a href="./rockpaperscissors/"
+		<a href="./sites/rockpaperscissors/"
 			><button>
 				My Rock Paper Scissors Website<br /><img
 					src="./uploadedassets/webassets/rock-paper-scissors.png"
@@ -26,7 +22,7 @@
 				/></button
 		></a>
 
-		<a href="./calculator/"
+		<a href="./sites/calculator/"
 			><button>
 				A Calculator in HTML<br /><img
 					src="./uploadedassets/webassets/calc.png"
@@ -34,7 +30,7 @@
 				/></button
 		></a>
 
-		<a href="./timeslider/"
+		<a href="./sites/timeslider/"
 			><button>
 				Time Slider<br /><img
 					src="./uploadedassets/webassets/timeslider.png"
@@ -42,7 +38,7 @@
 				/></button
 		></a>
 
-		<a href="./unitconverter/"
+		<a href="./sites/unitconverter/"
 			><button>
 				Unit Converter<br /><img
 					src="./uploadedassets/webassets/unitconverter.png"
@@ -50,7 +46,7 @@
 				/></button
 		></a>
 
-		<a href="./moveText/"
+		<a href="./sites/moveText/"
 			><button>
 				Move the text<br /><img
 					src="./uploadedassets/webassets/movetext.png"
@@ -58,7 +54,7 @@
 				/></button
 		></a>
 
-		<a href="./spinText/"
+		<a href="./sites/spinText/"
 			><button>
 				Spin the text<br /><img
 					src="./uploadedassets/webassets/spintext.png"
@@ -66,7 +62,7 @@
 				/></button
 		></a>
 
-		<a href="./mangomania/"
+		<a href="./sites/mangomania/"
 			><button>
 				Mango Mania<br /><img
 					src="./uploadedassets/webassets/mango.png"
@@ -74,7 +70,7 @@
 				/></button
 		></a>
 
-		<a href="./compiler/"
+		<a href="./sites/compiler/"
 			><button>
 				W3BCR3ATE<br /><img
 					src="./uploadedassets/webassets/compiler.png"
@@ -82,21 +78,21 @@
 				/></button
 		></a>
 
-		<a href="./textChanger/"
+		<a href="./sites/textChanger/"
 			><button>
 				Text Changer<br /><img
 					height="100px"
 					src="./uploadedassets/webassets/textchange.png"
 				/></button
 		></a>
-		<a href="./TEXTEDTN/"
+		<a href="./sites/TEXTEDTN/"
 			><button>
 				TEXTEDTN<br /><img
 					height="100px"
 					src="./uploadedassets/webassets/textedtn.png"
 				/></button
 		></a>
-		<a href="./charcntr1/"
+		<a href="./sites/charcntr1/"
 			><button>
 				charcntr1<br /><img
 					height="100px"
