--- a/sites/btc/index.html
+++ b/sites/btc/index.html
@@ -5,21 +5,76 @@
 		<title>BlueTransCursor</title>
 	</head>
 	<body>
-		BlueTransCursor is a simple transparent blue cursor pack that can be used on
-		any Windows system. Down below you can see previews of the cursors.
+		BlueTransCursor is a simple transparent blue cursor pack (with animations)
+		that can be used on any Windows system. Down below you can see previews of
+		the cursors.
 		<br />
 		<br />
-		Note: These images are 125% larger than the normal cursor.
+		Hover to see what the cursor type is.
+		<br />
+		<br />
+		Note: These images are a bit larger than the normal cursor.
+		<br />
 
 		<span id="holder">
-			<div>
-				<img src="./ani/Standard.gif" type="image/gif" /><br />
-				Standard
+			<div title="Standard cursor">
+				<img src="./ani/Standard.png" type="image/png" />
 			</div>
-			<br />
-			<div>
-				<img src="./ani/Alternate.gif" type="image/gif" /><br />Alternate
+			<div title="Help cursor">
+				<img src="./ani/Help.png" type="image/png" /><br />
+			</div>
+			<div title="Working in Background cursor">
+				<img src="./ani/Working.png" type="image/png" />
+			</div>
+			<div title="Loading cursor">
+				<img src="./ani/Loading.png" type="image/png" />
+			</div>
+			<div title="Pointer cursor">
+				<img src="./ani/Pointer.png" type="image/png" /><br />
+			</div>
+			<div title="Move - cursor">
+				<img src="./cur/DragHorizontal.png" type="image/png" /><br />
+			</div>
+			<div title="Move | cursor">
+				<img src="./cur/DragVertical.png" type="image/png" /><br />
+			</div>
+			<div title="Move \ cursor">
+				<img src="./cur/DragDiagonal1.png" type="image/png" /><br />
+			</div>
+			<div title="Move / cursor">
+				<img src="./cur/DragDiagonal2.png" type="image/png" /><br />
+			</div>
+			<div title="Move everywhere cursor">
+				<img src="./ani/Move.png" type="image/png" /><br />
+			</div>
+			<div title="Alternate (up) cursor">
+				<img src="./ani/Alternate.png" type="image/png" /><br />
+			</div>
+			<div title="Disabled cursor">
+				<img src="./cur/NO.png" type="image/png" /><br />
+			</div>
+			<div title="Pen cursor">
+				<img src="./cur/Pen.png" type="image/png" /><br />
+			</div>
+			<div title="Text cursor">
+				<img src="./cur/Text.png" type="image/png" /><br />
+			</div>
+			<div title="Link cursor">
+				<img src="./ani/Link.png" type="image/png" /><br />
+			</div>
+			<div title="Location select cursor">
+				<img src="./ani/Link Location.png" type="image/png" /><br />
+			</div>
+			<div title="Person select cursor">
+				<img src="./ani/Link Person.png" type="image/png" /><br />
+			</div>
+			<div
+				onclick="downloadFile('../../uploadedassets/BlueTransCursor.zip')"
+				style="background-color: lightblue; width: 100px"
+			>
+				Download
 			</div>
 		</span>
+		<script src="script.js"></script>
 	</body>
 </html>
