--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 			Welcome to my website! If you want to see my creations, click one of the
 			buttons below:
 		</h2>
+		<title>msuru</title>
 	</head>
 
 	<body>
 		Files: <br />
 		<a href="./sites/btc/"
-			><button height="120px" width="100px">BlueTransCursor</button></a
-		>
+			><button height="120px" width="100px">
+				BlueTransCursor
+				<br /><img src="sites/btc/ani/Standard.png" /><img
+					src="sites/btc/ani/Loading.png"
+				/><img src="sites/btc/ani/Pointer.png" /></button
+		></a>
 		<br />
 		Websites: <br />
 		<a href="./sites/rockpaperscissors/"
