--- a/sites/btc/index.html
+++ b/sites/btc/index.html
@@ -7,7 +7,13 @@
 	<body>
 		BlueTransCursor is a simple transparent blue cursor pack (with animations)
 		that can be used on any Windows system. Down below you can see previews of
-		the cursors.
+		the cursors.<br />
+		<button
+			onclick="location.href = '../../uploadedassets/BlueTransCursor.zip'"
+			style="background-color: lightblue; width: 100px"
+		>
+			Download
+		</button>
 		<br />
 		<br />
 		Hover to see what the cursor type is.
@@ -67,12 +73,6 @@
 			</div>
 			<div title="Person select cursor">
 				<img src="./ani/Link Person.png" type="image/png" /><br />
-			</div>
-			<div
-				onclick="downloadFile('../../uploadedassets/BlueTransCursor.zip')"
-				style="background-color: lightblue; width: 100px"
-			>
-				Download
 			</div>
 		</span>
 		<script src="script.js"></script>
