Renamed some files

--- a/sites/calculator/index.html
+++ b/sites/calculator/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="calcstyles.css" />
+		<link rel="stylesheet" href="style.css" />
 		<title>CALCULATOR IN HTML!</title>
 	</head>
 	<body>
@@ -49,6 +49,6 @@
 			>You are currently in computer mode. Click here to go to mobile mode</a
 		>
 		<script src="more.js"></script>
-		<script src="calculator-script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
