Renamed more files

--- a/sites/rockpaperscissors/index.html
+++ b/sites/rockpaperscissors/index.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="style.css">
-<title>Simple Rock Paper Scissors</title>
-</head>
-<body>
-<h3>Refresh the page to play again! (you dont need to, but if you want to reset the contents, you can)</h3>
-Choose player 1=<br>
-<button onclick="rock1()">rock <img src="https://img.freepik.com/premium-vector/boulder-stone-fragments-heavy-solid-bowlder-big-rough-rock-formation-geology-drawing-mountain-rubble-pieces-realistic-hand-drawn-vector-illustration-isolated-white-background_198278-17169.jpg"></button>
+	<head>
+		<link rel="stylesheet" href="style.css" />
+		<title>Simple Rock Paper Scissors</title>
+	</head>
+	<body>
+		<h3>
+			Refresh the page to play again! (you dont need to, but if you want to
+			reset the contents, you can)
+		</h3>
+		Choose player 1=<br />
+		<button onclick="rock1()">
+			rock
+			<img
+				src="https://img.freepik.com/premium-vector/boulder-stone-fragments-heavy-solid-bowlder-big-rough-rock-formation-geology-drawing-mountain-rubble-pieces-realistic-hand-drawn-vector-illustration-isolated-white-background_198278-17169.jpg"
+			/>
+		</button>
 
-<button onclick="paper1()">paper <img src="https://www.dick-blick.com/items/102/40/10240-1009-1-2ww-m.jpg"></button>
+		<button onclick="paper1()">
+			paper
+			<img
+				src="https://www.dick-blick.com/items/102/40/10240-1009-1-2ww-m.jpg"
+			/>
+		</button>
 
-<button onclick="scissors1()">scissors <img src="https://img.freepik.com/premium-vector/scissors-sewing-embroidery-symbol-hand-drawn_599395-495.jpg"></button>
+		<button onclick="scissors1()">
+			scissors
+			<img
+				src="https://img.freepik.com/premium-vector/scissors-sewing-embroidery-symbol-hand-drawn_599395-495.jpg"
+			/>
+		</button>
 
-<br>
+		<br />
 
-Choose player 2=<br>
-<button onclick="rock2()">rock <img src="https://img.freepik.com/premium-vector/boulder-stone-fragments-heavy-solid-bowlder-big-rough-rock-formation-geology-drawing-mountain-rubble-pieces-realistic-hand-drawn-vector-illustration-isolated-white-background_198278-17169.jpg"></button>
+		Choose player 2=<br />
+		<button onclick="rock2()">
+			rock
+			<img
+				src="https://img.freepik.com/premium-vector/boulder-stone-fragments-heavy-solid-bowlder-big-rough-rock-formation-geology-drawing-mountain-rubble-pieces-realistic-hand-drawn-vector-illustration-isolated-white-background_198278-17169.jpg"
+			/>
+		</button>
 
-<button onclick="paper2()">paper <img src="https://www.dick-blick.com/items/102/40/10240-1009-1-2ww-m.jpg"></button>
+		<button onclick="paper2()">
+			paper
+			<img
+				src="https://www.dick-blick.com/items/102/40/10240-1009-1-2ww-m.jpg"
+			/>
+		</button>
 
-<button onclick="scissors2()">scissors <img src="https://img.freepik.com/premium-vector/scissors-sewing-embroidery-symbol-hand-drawn_599395-495.jpg"></button><br>
-<h3 id="game"></h3>
-<script src="gamescript.js"></script>
-<script src="pictures.js"></script>
-</body>
+		<button onclick="scissors2()">
+			scissors
+			<img
+				src="https://img.freepik.com/premium-vector/scissors-sewing-embroidery-symbol-hand-drawn_599395-495.jpg"
+			/></button
+		><br />
+		<h3 id="game"></h3>
+		<script src="script.js"></script>
+		<script src="pictures.js"></script>
+	</body>
 </html>
