Rename 'compiler' folder to 'W3BCR3ATE'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				/></button
 		></a>
 
-		<a href="./sites/compiler/"
+		<a href="./sites/W3BCR3ATE/"
 			><button>
 				W3BCR3ATE<br /><img
 					src="./uploadedassets/webassets/compiler.png"
