--- a/404.html
+++ b/404.html
@@ -2,7 +2,8 @@
 <html>
   <body>
     <h1>
-      ERROR 404: FILE NOT FOUND
+      ERROR 404 FILE NOT FOUND
     </h1>
+    This might have happened because you have went to a folder/file that does not exist. Try a different link or go <a href="msuru-coder-notgamer.github.io/Website">home</a>.
   </body>
 </html>
