--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
     <h1>
       ERROR 404 FILE NOT FOUND
     </h1>
-    This might have happened because you have went to a folder/file that does not exist. Try a different link or go <a href="https://msuru-coder-notgamer.github.io/Website">home</a>.
+    This might have happened because you have went to a folder/file that does not exist. Try a different link, go to the <a href="https://msuru-coder-notgamer.github.io/Website">homepage</a> or change the casing.
   </body>
 </html>
